--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         .form-group { margin-bottom: 15px; }
         label { display: block; color: #616161; margin-bottom: 5px; }
         input, select { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px; outline: none; }
+        .nrc-group { display: flex; gap: 10px; }
+        .nrc-group select, .nrc-group input { width: 33%; }
         button { width: 100%; padding: 12px; background: linear-gradient(90deg, #2e7d32, #4caf50); color: #fff; border: none; border-radius: 5px; cursor: pointer; }
         button:hover { background: linear-gradient(90deg, #1b5e20, #388e3c); }
         .switch { text-align: center; margin-top: 10px; color: #616161; cursor: pointer; }
@@ -43,8 +45,33 @@
             <input type="text" id="name" placeholder="သင့်အမည်ထည့်ပါ" required>
         </div>
         <div class="form-group">
-            <label>မှတ်ပုံတင် (ဥပမာ: 12/ဒပန/နိုင် 893009)</label>
-            <input type="text" id="nrc" placeholder="12/ဒပန/နိုင် 893009" required>
+            <label>မှတ်ပုံတင်</label>
+            <div class="nrc-group">
+                <select id="nrc-region" required>
+                    <option value="">ဒေသ ရွေးပါ</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                </select>
+                <input type="text" id="nrc-town" placeholder="မြို့" required>
+                <select id="nrc-type" required>
+                    <option value="">အမျိုးအစား</option>
+                    <option value="ဧည့်">ဧည့်</option>
+                    <option value="နိုင်">နိုင်</option>
+                </select>
+            </div>
+            <input type="text" id="nrc-number" maxlength="6" placeholder="NRC နံပါတ်ထည့်ရန်" required>
         </div>
         <div class="form-group">
             <label>ဖုန်းနံပါတ် (ဥပမာ: 09xxxxxxxxx)</label>
@@ -204,12 +231,19 @@
 
         document.getElementById('signup-btn').addEventListener('click', async () => {
             const name = document.getElementById('name').value;
-            const nrc = document.getElementById('nrc').value;
+            const nrcRegion = document.getElementById('nrc-region').value;
+            const nrcTown = document.getElementById('nrc-town').value;
+            const nrcType = document.getElementById('nrc-type').value;
+            const nrcNumber = document.getElementById('nrc-number').value;
             const phone = document.getElementById('phone').value;
             const pin = document.getElementById('pin').value;
 
-            if (!name || !nrc.match(/^\d{2}\/[A-Za-z]+\/[A-Za-z]+\s\d{6}$/) || !phone.match(/^09\d{9}$/) || pin.length !== 6) {
-                alert('အချက်အလက်များကို မှန်ကန်စွာ ဖြည့်ပါ။');
+            // NRC ပေါင်းစပ်မှု
+            const nrc = `${nrcRegion}/${nrcTown}/${nrcType} ${nrcNumber}`;
+
+            // Validation
+            if (!name || !nrcRegion || !nrcTown || !nrcType || !nrcNumber.match(/^\d{6}$/) || !phone.match(/^09\d{9}$/) || pin.length !== 6) {
+                alert('အချက်အလက်များကို ပြည့်စုံစွာ ဖြည့်ပါ။');
                 return;
             }
 
