--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Arial, sans-serif; }
         body {
-            background: url('https://i.imgur.com/ice-background.jpg') no-repeat center center fixed;
+            background: url('https://github.com/Opper125/opper-payment/blob/main/ice-background.jpg') no-repeat center center fixed;
             background-size: cover;
             position: relative;
             min-height: 100vh;
@@ -184,7 +184,7 @@
 <body>
     <div class="id-badge" id="device-id-badge"></div>
     <div id="home" class="container hidden">
-        <img src="https://i.imgur.com/opper-logo.png" alt="OPPER Logo" class="logo">
+        <img src="https://github.com/Opper125/opper-payment/blob/main/opper-logo.png" alt="OPPER Logo" class="logo">
         <h2>OPPER မှကြိုဆိုပါတယ်</h2>
 
         <!-- My Wallet Section -->
