--- a/index.html
+++ b/index.html
@@ -7,82 +7,57 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Arial, sans-serif; }
         body {
-            background: url('https://github.com/Opper125/opper-payment/blob/main/ice-background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            position: relative;
+            background: linear-gradient(135deg, #e0f7fa, #b2ebf2);
             min-height: 100vh;
-            overflow: hidden;
-        }
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(180deg, rgba(173, 216, 230, 0.8), rgba(135, 206, 235, 0.6));
-            animation: waterFlow 10s infinite linear;
-            z-index: -1;
-        }
-        @keyframes waterFlow {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100%); }
+            overflow-x: hidden;
         }
         .id-badge {
             position: absolute;
-            top: 20px;
-            right: 20px;
-            background: rgba(173, 216, 230, 0.9);
-            border: 2px solid #8b4513;
+            top: 10px;
+            right: 10px;
+            background: #80deea;
+            border: 2px solid #5d4037;
             border-radius: 8px;
-            padding: 10px;
+            padding: 8px;
             font-weight: bold;
             color: #333;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .container {
             width: 90%;
             max-width: 500px;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.9);
+            background: #ffffff;
             border-radius: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             margin: 20px auto;
-            position: relative;
-            z-index: 1;
-        }
-        .logo {
-            width: 100px;
-            display: block;
-            margin: 0 auto 20px;
         }
         h2 {
             text-align: center;
             color: #2e7d32;
             margin-bottom: 20px;
             font-size: 24px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         }
         .form-group { margin-bottom: 20px; }
         label { display: block; color: #444; margin-bottom: 8px; font-weight: bold; }
         input, select {
             width: 100%;
             padding: 12px;
-            border: 2px solid #8b4513;
+            border: 2px solid #5d4037;
             border-radius: 8px;
-            background: rgba(173, 216, 230, 0.8);
+            background: #e0f7fa;
             color: #333;
             outline: none;
             transition: all 0.3s ease;
         }
-        input:focus, select:focus { border-color: #4682b4; }
+        input:focus, select:focus { border-color: #0288d1; }
         .nrc-group { display: flex; gap: 10px; }
         .nrc-group select, .nrc-group input { width: 33%; }
         button {
             width: 100%;
             padding: 12px;
-            background: rgba(173, 216, 230, 0.9);
-            border: 2px solid #8b4513;
+            background: #80deea;
+            border: 2px solid #5d4037;
             border-radius: 8px;
             color: #333;
             font-weight: bold;
@@ -90,7 +65,7 @@
             transition: all 0.3s ease;
         }
         button:hover {
-            background: rgba(135, 206, 235, 1);
+            background: #4fc3f7;
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
@@ -100,10 +75,9 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.9);
+            background: #ffffff;
             padding: 10px;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-            z-index: 2;
         }
         .menu button {
             flex: 1;
@@ -113,7 +87,7 @@
             align-items: center;
             font-size: 12px;
             padding: 5px;
-            background: rgba(173, 216, 230, 0.8);
+            background: #80deea;
         }
         .menu img { width: 24px; height: 24px; margin-bottom: 5px; }
         .hidden { display: none; }
@@ -124,21 +98,21 @@
             object-fit: cover;
             margin: 10px auto;
             display: block;
-            border: 3px solid #8b4513;
+            border: 3px solid #5d4037;
         }
         .history-item {
             padding: 10px;
             border-bottom: 1px solid #ddd;
-            background: rgba(255, 255, 255, 0.8);
+            background: #f5f5f5;
             border-radius: 5px;
             margin-bottom: 5px;
         }
         .history-header {
-            background: rgba(173, 216, 230, 0.9);
+            background: #80deea;
             padding: 10px;
             border-radius: 8px;
             margin-bottom: 10px;
-            border: 2px solid #8b4513;
+            border: 2px solid #5d4037;
         }
         .status {
             padding: 5px 10px;
@@ -184,7 +158,6 @@
 <body>
     <div class="id-badge" id="device-id-badge"></div>
     <div id="home" class="container hidden">
-        <img src="https://github.com/Opper125/opper-payment/blob/main/opper-logo.png" alt="OPPER Logo" class="logo">
         <h2>OPPER မှကြိုဆိုပါတယ်</h2>
 
         <!-- My Wallet Section -->
@@ -321,13 +294,19 @@
                 deviceId = generateDeviceId();
                 const { data: existingDevice, error } = await supabase.from('users').select('*').eq('device_id', deviceId).single();
                 if (existingDevice) deviceId = generateDeviceId();
-                await supabase.from('users').insert({ device_id: deviceId, balance: 0, nrc_status: 'pending' });
+                const { error: insertError } = await supabase.from('users').insert({ device_id: deviceId, balance: 0, nrc_status: 'pending' });
+                if (insertError) {
+                    console.error('Insert Error:', insertError);
+                    alert('အကောင့်ဖန်တီးမှု မအောင်မြင်ပါ။');
+                    return;
+                }
                 localStorage.setItem('deviceId', deviceId);
             }
 
             const { data: user, error } = await supabase.from('users').select('*').eq('device_id', deviceId).single();
             if (error) {
                 console.error('Device Init Error:', error);
+                alert('အကောင့်ရယူမှု မအောင်မြင်ပါ။');
                 return;
             }
 
@@ -365,7 +344,8 @@
                 const reader = new FileReader();
                 reader.onload = async (e) => {
                     document.getElementById('profile-img').src = e.target.result;
-                    await supabase.from('users').update({ profile_img: e.target.result }).eq('device_id', currentDevice.device_id);
+                    const { error } = await supabase.from('users').update({ profile_img: e.target.result }).eq('device_id', currentDevice.device_id);
+                    if (error) console.error('Profile Upload Error:', error);
                 };
                 reader.readAsDataURL(file);
             }
